<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:gravity="center"
    android:orientation="vertical"
    android:paddingHorizontal="16dp">

    <ImageView
        android:id="@+id/button_guide_close"
        android:layout_width="27dp"
        android:layout_height="27dp"
        android:layout_gravity="right"
        android:src="@drawable/ic_x_white" />

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="17dp"
        app:cardCornerRadius="10dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@color/white"
            android:gravity="center_horizontal"
            android:orientation="vertical"
            android:paddingHorizontal="30dp"
            android:paddingVertical="30dp">

            <ImageView
                android:id="@+id/imageview_guide_icon"
                android:layout_width="wrap_content"
                android:layout_height="28dp"
                android:src="@drawable/ic_logo"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <TextView
                android:id="@+id/textview_guide_head"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/notosans_kr_regular"
                android:gravity="center_horizontal"
                android:includeFontPadding="false"
                android:lineSpacingExtra="9sp"
                android:text="@string/guide_voice_head"
                android:textColor="#505050"
                android:textSize="18sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageview_guide_icon" />


            <TextView
                android:id="@+id/textview_guide_prev"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="15dp"
                android:fontFamily="@font/notosans_kr_black"
                android:includeFontPadding="false"
                android:text="@string/all_prev"
                android:textColor="@color/mango"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_guide_head" />

            <TextView
                android:id="@+id/textview_guide_prev_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/guide_prev"
                android:textColor="@color/greyish_brown"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/textview_guide_prev"
                app:layout_constraintTop_toTopOf="@id/textview_guide_prev" />


            <TextView
                android:id="@+id/textview_guide_next"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/notosans_kr_black"
                android:includeFontPadding="false"
                android:text="@string/all_next"
                android:textColor="@color/mango"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_guide_prev" />

            <TextView
                android:id="@+id/textview_guide_next_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/guide_next"
                android:textColor="@color/greyish_brown"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/textview_guide_next"
                app:layout_constraintTop_toTopOf="@id/textview_guide_next" />


            <TextView
                android:id="@+id/textview_guide_replay"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="25dp"
                android:layout_marginLeft="25dp"
                android:layout_marginTop="6dp"
                android:fontFamily="@font/notosans_kr_black"
                android:includeFontPadding="false"
                android:text="@string/all_replay"
                android:textColor="@color/mango"
                android:textSize="20sp"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_guide_next" />

            <TextView
                android:id="@+id/textview_guide_replay_detail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/guide_replay"
                android:textColor="@color/greyish_brown"
                android:textSize="20sp"
                app:layout_constraintLeft_toRightOf="@id/textview_guide_replay"
                app:layout_constraintTop_toTopOf="@id/textview_guide_replay" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/orange_yellow"
                app:layout_constraintBottom_toBottomOf="@id/textview_guide_replay"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toTopOf="@id/textview_guide_prev" />

            <View
                android:layout_width="1dp"
                android:layout_height="0dp"
                android:background="@color/orange_yellow"
                app:layout_constraintBottom_toBottomOf="@id/textview_guide_replay"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintTop_toTopOf="@id/textview_guide_prev" />

            <TextView
                android:id="@+id/textview_guide_tail"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="30dp"
                android:text="@string/guide_voice_tail"
                android:textColor="@color/brownish_grey"
                android:textSize="14sp"
                android:fontFamily="@font/notosans_kr_light"
                android:includeFontPadding="false"
                app:layout_constraintLeft_toLeftOf="parent"
                app:layout_constraintRight_toRightOf="parent"
                app:layout_constraintTop_toBottomOf="@id/textview_guide_replay" />

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <CheckBox
        android:id="@+id/checkbox_guide_dont_watch"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="right"
        android:layout_marginTop="10dp"
        android:fontFamily="@font/notosans_kr_medium"
        android:includeFontPadding="false"
        android:buttonTint="@color/white"
        android:text="@string/guide_dont_watch"
        android:textColor="@color/white"
        android:textSize="14sp" />

</LinearLayout>