<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingTop="10dp"
        android:paddingBottom="30dp">

        <LinearLayout
            android:id="@+id/layout_recipeinfo_tags"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:padding="10dp">

            <TextView
                android:id="@+id/textview_recipeinfo_tag_1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@drawable/bg_tag"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="3dp"
                android:textColor="@color/white"
                tools:text="# 달달한" />

            <TextView
                android:id="@+id/textview_recipeinfo_tag_2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_tag"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="3dp"
                android:textColor="@color/white"
                tools:text="# 달달한" />

            <TextView
                android:id="@+id/textview_recipeinfo_tag_3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="10dp"
                android:layout_marginLeft="10dp"
                android:background="@drawable/bg_tag"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:paddingHorizontal="14dp"
                android:paddingVertical="3dp"
                android:textColor="@color/white"
                tools:text="# 달달한" />
        </LinearLayout>

        <TextView
            android:id="@+id/textview_recipeinfo_detail"
            style="@style/TextViewDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="@dimen/margin_recipeinfo_layout_horizon"
            android:layout_marginTop="10dp"
            android:fontFamily="@font/notosans_kr_regular"
            android:includeFontPadding="false"
            android:textColor="@color/greyish_brown"
            android:textSize="16sp"
            tools:text="여유로운 주말에는 팬케이크 믹스를 활용하여 맛있고 간단한 브런치를 즐겨보세요! 재료도 간편하고 요리 과정도 쉽지만 분위기 내기에는 최고랍니다.기호에 따라 시럽 및 견과류 혹은 과일을 얹어 색다른 맛을 시도해 보세요!" />


        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp">

            <TextView
                android:id="@+id/textview_recipeinfo_title"
                style="@style/TitleMain"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="@dimen/margin_recipeinfo_layout_horizon"
                android:layout_marginLeft="@dimen/margin_recipeinfo_layout_horizon"
                android:fontFamily="@font/notosans_kr_medium"
                android:includeFontPadding="false"
                android:text="@string/all_ingredient_info"
                android:textColor="@color/greyish_brown"
                android:textSize="20sp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintStart_toStartOf="parent" />

            <TextView
                android:id="@+id/textview_recipeinfo_servings"
                style="@style/TitleSub"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="start"
                android:layout_marginEnd="@dimen/margin_recipeinfo_item_horizon"
                android:layout_marginRight="@dimen/margin_recipeinfo_item_horizon"
                android:fontFamily="@font/notosans_kr_regular"
                android:includeFontPadding="false"
                android:text="2인분 기준"
                android:textSize="13sp"
                app:layout_constraintBaseline_toBaselineOf="@+id/textview_recipeinfo_title"
                app:layout_constraintEnd_toEndOf="parent" />

        </androidx.constraintlayout.widget.ConstraintLayout>

        <TextView
            style="@style/TextViewDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="13dp"
            android:background="#26ff9e00"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/margin_recipeinfo_item_horizon"
            android:paddingVertical="8dp"
            android:text="@string/all_ingredient_main"
            android:textColor="@color/greyish_brown"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layout_recipeinfo_ingredient_main"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_recipeinfo_layout_horizon"
            android:layout_marginEnd="@dimen/margin_recipeinfo_layout_horizon"
            android:orientation="vertical" />


        <TextView
            style="@style/TextViewDefault"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="#26ff9e00"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:paddingHorizontal="@dimen/margin_recipeinfo_item_horizon"
            android:paddingVertical="8dp"
            android:text="@string/all_ingredient_sub"
            android:textColor="@color/greyish_brown"
            android:textSize="14sp" />

        <LinearLayout
            android:id="@+id/layout_recipeinfo_ingredient_sub"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/margin_recipeinfo_layout_horizon"
            android:layout_marginEnd="@dimen/margin_recipeinfo_layout_horizon"
            android:orientation="vertical" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginTop="7dp"
            android:background="#d5d5d5" />

        <TextView
            style="@style/TitleMain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="start"
            android:layout_marginVertical="20dp"
            android:layout_marginStart="@dimen/margin_recipeinfo_layout_horizon"
            android:layout_marginLeft="@dimen/margin_recipeinfo_layout_horizon"
            android:fontFamily="@font/notosans_kr_medium"
            android:includeFontPadding="false"
            android:text="@string/all_nutrition_info"
            android:textColor="@color/greyish_brown"
            android:textSize="20sp" />

        <LinearLayout
            android:id="@+id/layout_recipeinfo_nutrition"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="#26ff9e00"
            android:orientation="vertical"
            android:paddingVertical="30dp" />
    </LinearLayout>
</ScrollView>